syntax="proto3";

package organization_service;
option go_package="genproto/organization_service";

import "google/protobuf/struct.proto";

message Category{
    string id=1;
    string name=2;
    google.protobuf.Struct parent = 3;
}

message CreateCategoryRequest{
    string name=1;
    google.protobuf.Struct category = 2;
}

message GetCategorysListRequest{
    string category=1;
}

message GetCategorysListResponse {
    repeated Category categorys = 1;
    int32 count = 2;
}

message UpdateCategoryRequest {
    Category category = 1;
}