syntax="proto3";

package organization_service;
option go_package="genproto/organization_service";

message Product{
    string id=1;
    string name=2;
    string photo=3;
    string categoryId=4;
    string branchId=5;
    string barcode=6;
    float price=7;
}

message CreateProductRequest{
    string name=1;
    string photo=2;
    string categoryId=3;
    string branchId=4;
    string barcode=5;
    float price=6;
}

message GetListProductRequest{
    string name=1;
    string barcode=2;
}

message GetProductsListResponse {
    repeated Product products = 1;
    int32 count = 2;
}

message UpdateProductRequest {
    Product product = 1;
}

